--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/gil.css') }}"><!--[if lte IE 6]>
     <style>#top, #bottom, #left, #right { display: none; }</style>
     <![endif]-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon-base.ico') }}" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='img/apple-touch-icon-57x57.png') }}">
     <link rel="apple-touch-icon" sizes="60x60" href="{{url_for('static', filename='img/apple-touch-icon-60x60.png') }}">
@@ -150,16 +151,21 @@
         <ul class="nav-list">
           <li class="nav-list__item"><a href="{{PORTAL}}/">Home</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/about">About</a></li>
-          <li class="nav-list__item"><a class="decision-support-link" href="{{PORTAL}}/decision-support">Decision Support</a></li>
-          <li class="nav-list__item"><a class="symptom-tracker-link" href="{{PORTAL}}/symptom-tracker">Symptom Tracker</a></li>
+          <li class="nav-list__item"><a class="decision-support-link" href="{{PORTAL}}{{url_for('portal.decision_support')}}">Decision Support</a></li>
+          <li class="nav-list__item"><a class="symptom-tracker-link" href="{{PORTAL}}{{url_for('portal.symptom_tracker')}}">Symptom Tracker</a></li>
         </ul>
         <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.prostate_cancer_facts')}}">Prostate Cancer Facts</a></li>
         </ul>
         <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/terms">Terms</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/privacy">Privacy</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.terms_and_conditions')}}">Terms</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.privacy')}}">Privacy</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.contact')}}">Contact</a></li>
+        </ul>
+        <ul class="nav-list nav-list--lower">
+          <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.contact')}}" ><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>Contact Us</a></li>
+          <li class="nav-list__item"><a href="https://www.facebook.com/TrueNTH.ProstateCancer/" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>Facebook</a></li>
+          <li class="nav-list__item"><a href="https://twitter.com/TrueNTH_US" target="_blank"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>Twitter</a></li>
         </ul>
         <div class="footer__logo-area"><a href="http://www.movember.com" target="_blank">
             <figure class="footer__logo--movember"></figure></a></div>
