--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -947,6 +947,10 @@ div.right-panel {
     left: -1px;
   }
 }
+#patientAssessmentDownload {
+  display: inline-block;
+  min-height: 1.2em;
+}
 #patientsInstrumentListWrapper {
   position: relative;
   padding: 0.6em 0 0.3em 0;
@@ -968,6 +972,11 @@ div.right-panel {
   margin: 1.5em;
   opacity: 1;
   transition: opacity 250ms ease-out;
+}
+.instrument-container label {
+  min-width: 100px;
+  max-width: 100%;
+  display: inline-block;
 }
 #patientsDownloadTypeList {
   margin-top: 0.5em;
