--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -14,10 +14,10 @@
         <label class="profile-birthdate-label">{{ _("Birth Date") }}</label>
         <div class="flex">
             <div class="flex-item" id="bdDateContainer">
-                <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="DD" type="text" pattern="(\d)?\d" maxlength="2" data-error="Birthday must be valid and in required format." data-error-field="errorbirthday" required />
+                <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="DD" type="text" pattern="(\d)?\d" maxlength="2" data-error="Birth date must be valid and in the required format." data-error-field="errorbirthday" required />
             </div>
             <div class="flex-item" id="bdMonthContainer">
-                <select class="form-control bd-element" name="birthdayMonth" id="month" data-error="Birthday must be valid and in required format." data-error-field="errorbirthday" required>
+                <select class="form-control bd-element" name="birthdayMonth" id="month" data-error="Birth date must be valid and in the required format." data-error-field="errorbirthday" required>
                     <option value="">{{ _("Month") }}...</option>
                     <option value="01">{{ _("January") }}</option>
                     <option value="02">{{ _("February") }}</option>
@@ -34,7 +34,7 @@
                 </select>
             </div>
             <div class="flex-item" id="bdYearContainer">
-                <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" pattern = "(19|20)\d{2}" type="text" maxlength="4" data-error="Birthday must be valid and in required format." data-error-field="errorbirthday" required />
+                <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" pattern = "(19|20)\d{2}" type="text" maxlength="4" data-error="Birth date must be valid and in the required format." data-error-field="errorbirthday" required />
             </div>
         </div>
         <div class="help-block with-errors"></div>
@@ -1690,14 +1690,25 @@
         </div>
         {{profileClinicalQuestions(person, current_user) | show_macro('clinical_questions')}}
         {{profileProcedures(person, current_user) | show_macro('procedures')}}
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container {% if person.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES%}editable{% endif %}" data-sections="org">
-                    <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
-                     {{profileOrgsSelector(person, current_user, consent_agreements)}}
+       {%-if person.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES-%}
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="profile-item-container editable" data-sections="org">
+                        <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
+                         {{profileOrgsSelector(person, current_user, consent_agreements)}}
+                    </div>
                 </div>
             </div>
-        </div>
+        {%-else-%}
+             <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <div class="profile-item-container {% if person and person.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
+                        <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
+                        {{profileOrg(person,None,consent_agreements, current_user)}}
+                    </div>
+                </div>
+            </div>
+        {%-endif-%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
