--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -180,6 +180,11 @@ a.btn {
     display: inline-block !important;
   }
 }
+.consent-date-modal.fade {
+    -webkit-transition: opacity .7s ease-out !important;
+    -o-transition: opacity .7s ease-out !important;
+    transition: opacity .7s ease-out !important;
+}
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    @placeHolderColor;
 }
