remove test code

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1085,7 +1085,7 @@ div.right-panel {
   border-radius: 45px;
 }
 #mainDiv.portal {
-  background: #929291;
+  background: #82827c;
   height: 100vh;
   overflow: hidden;
 }
